Revised CSS rules for mobile view to better align with wireframes using correct mobile device view

--- a/css/styles.css
+++ b/css/styles.css
@@ -142,32 +142,6 @@ h5 {
 }
 
 /* Specific Element CSS rules */
-#top-logo:hover {
-  cursor: pointer;
-
-  /*
-  If webkit is not available in the browser, it's recommended to have a fallback.
-  https://stackoverflow.com/questions/15552082/css-rules-for-webkit-based-browsers
-  Here, I'm using webkit color and adding firefox support as well. If these fail, it
-  should fallback to just the default black color.
-  */
-  background-image:
-    linear-gradient(
-      25deg,
-      rgba(255, 189, 53, 1) 9%,
-      rgba(63, 167, 150, 1) 39%,
-      rgba(130, 103, 190, 1) 81%,
-      rgba(80, 32, 100, 1) 100%
-    );
-  color: var(--color-black);
-  /* stylelint-disable-next-line property-no-vendor-prefix */
-  -webkit-background-clip: text;
-  /* stylelint-disable-next-line property-no-vendor-prefix */
-  -moz-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -moz-text-fill-color: transparent;
-}
-
 .icon::before {
   display: inline-block;
   text-rendering: auto;
@@ -227,6 +201,32 @@ h5 {
 @media only screen and (min-width: 851px) {
   /* "Desktop" experience */
 
+  #top-logo:hover {
+    cursor: pointer;
+
+    /*
+    If webkit is not available in the browser, it's recommended to have a fallback.
+    https://stackoverflow.com/questions/15552082/css-rules-for-webkit-based-browsers
+    Here, I'm using webkit color and adding firefox support as well. If these fail, it
+    should fallback to just the default black color.
+    */
+    background-image:
+      linear-gradient(
+        25deg,
+        rgba(255, 189, 53, 1) 9%,
+        rgba(63, 167, 150, 1) 39%,
+        rgba(130, 103, 190, 1) 81%,
+        rgba(80, 32, 100, 1) 100%
+      );
+    color: var(--color-black);
+    /* stylelint-disable-next-line property-no-vendor-prefix */
+    -webkit-background-clip: text;
+    /* stylelint-disable-next-line property-no-vendor-prefix */
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+  }
+
   /* Likely unnecessary, possibly for specific overrides */
 }
 
@@ -248,6 +248,32 @@ h5 {
     object-fit: contain;
   }
 
+  #top-logo:active {
+    cursor: pointer;
+
+    /*
+      If webkit is not available in the browser, it's recommended to have a fallback.
+      https://stackoverflow.com/questions/15552082/css-rules-for-webkit-based-browsers
+      Here, I'm using webkit color and adding firefox support as well. If these fail, it
+      should fallback to just the default black color.
+      */
+    background-image:
+      linear-gradient(
+        25deg,
+        rgba(255, 189, 53, 1) 9%,
+        rgba(63, 167, 150, 1) 39%,
+        rgba(130, 103, 190, 1) 81%,
+        rgba(80, 32, 100, 1) 100%
+      );
+    color: var(--color-black);
+    /* stylelint-disable-next-line property-no-vendor-prefix */
+    -webkit-background-clip: text;
+    /* stylelint-disable-next-line property-no-vendor-prefix */
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+  }
+
   #dislike-button,
   #like-button {
     width: 30vw;
@@ -265,6 +291,15 @@ h5 {
   h1 {
     padding-left: 10px;
     padding-right: 10px;
+    margin: 0;
+  }
+
+  .margin-t-5 {
+    margin-top: 4rem;
+  }
+
+  .margin-t-3-mobile {
+    margin-top: 3rem;
   }
 
   .button-main:hover {
@@ -273,7 +308,7 @@ h5 {
   }
 
   .img-main {
-    height: 424px;
+    height: 230px;
   }
 
   .img-main img {
